scripts/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: 0015-setup
    chart: 0015-setup
    component: ibm-nginx
    heritage: Tiller
    release: 0015-setup
  name: <NAMESPACE>-cpd
  namespace: <NAMESPACE>
  selfLink: /apis/route.openshift.io/v1/namespaces/<NAMESPACE>/routes/<NAMESPACE>-cpd
spec:
  host: <ELB_DNSNAME>
  port:
    targetPort: ibm-nginx-https-port
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ibm-nginx-svc
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: <ELB_DNSNAME>
    routerName: router
    wildcardPolicy: None
